# RAG

./: .gitignore  README.md
client-examples-python/: requirements.txt
docs/: RHDP_Onboarding.md
evaluations/: .gitignore  README.md  conftest.py  deep_eval_rag.py  evaluate.py  get_rag_metrics.py  pyproject.toml  test_conversations_ui.py
evaluations/bad-conversations/: README.md  fail_answer_relevance.json  fail_chunk_alignment.json  fail_chunk_count.json  fail_chunk_deduplication.json  fail_contextual_precision.json  fail_contextual_recall.json  fail_contextual_relevancy.json  fail_factual_consistency.json  fail_faithfulness.json  fail_response_accuracy_contradiction.json  fail_response_accuracy_hallucination.json  fail_response_completeness.json  hr_benefits_test_fail.json
evaluations/conversations/hr/: hr_benefits_eap_direct.json  hr_benefits_enrollment_direct.json  hr_benefits_health_insurance_direct.json  hr_benefits_parental_leave_direct.json  hr_benefits_retirement_direct.json  hr_benefits_test_agent.json  hr_benefits_test_agent_all_collections.json  hr_benefits_test_direct.json  hr_benefits_test_fail.json  hr_benefits_vacation_days_direct.json
evaluations/conversations/legal/: legal_compliance_requirements_direct.json  legal_dispute_resolution_direct.json  legal_intellectual_property_direct.json  legal_key_contract_terms_direct.json  legal_liability_clause_direct.json  legal_termination_conditions_direct.json
evaluations/helpers/: __init__.py  custom_llm.py  endpoint.py  playwright_setup.py  token_counter.py
frontend/: Containerfile  pyproject.toml  (+2 more)
(+47 files in other folders)
