[project]
name = "rag-evaluations"
version = "0.1.0"
description = "RAG conversation evaluation framework"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.0",
    "pytest-playwright>=0.5.0",
    "playwright>=1.48.0",
    "deepeval>=1.2.6",
    "instructor>=1.7.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "markdownify>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]
